After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 783880 - cert-chooser-button: fix memory leak
cert-chooser-button: fix memory leak
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-applet
unspecified
Other All
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2017-06-17 01:51 UTC by Mohammed Sadiq
Modified: 2017-06-19 09:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
cert-chooser-button: fix memory leak (1.25 KB, patch)
2017-06-17 01:54 UTC, Mohammed Sadiq
none Details | Review

Description Mohammed Sadiq 2017-06-17 01:51:11 UTC
.
Comment 1 Mohammed Sadiq 2017-06-17 01:54:24 UTC
Created attachment 353930 [details] [review]
cert-chooser-button: fix memory leak