cert-chooser-button: fix memory leak

Fixes: 2644d631afd072f66878799e75c5aa1947510c7a

https://bugzilla.gnome.org/show_bug.cgi?id=783880